--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.14.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pureimage": "^0.4.13"
   }
 }
